--- a/Basic/public/style.css
+++ b/Basic/public/style.css
@@ -9,10 +9,6 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
     display: grid;
     place-items: center;
     background-color: #ebebee;
@@ -26,7 +22,6 @@ body {
     border: 8px solid #dddddd;
     border-radius: 24px;
     overflow: hidden;
-
 }
 
 .name {
@@ -36,7 +31,6 @@ body {
     padding: 8px 16px;
     color: #7e7e7e;
     background-color: #ebebeb;
-
 }
 
 .name>span {
@@ -63,71 +57,142 @@ body {
     overflow-y: scroll;
     background-color: #f6f6f6;
 }
-.message-left,.message-right{
+
+.message-left,
+.message-right {
     list-style: none;
     padding: 8px 12px;
-    margin:12px;
+    margin: 12px;
     font-size: 18px;
-    word-wrap:break-word;
+    word-wrap: break-word;
 }
-.message-left{
+
+.message-left {
     border-radius: 20px 20px 20px 0px;
     align-self: flex-start;
     background-color: #fff;
     box-shadow: -2px 2px 4px #dcdcdc;
 }
-.message-right{
+
+.message-right {
     border-radius: 20px 20px 0px 20px;
     align-self: flex-end;
     background-color: #2d2d2d;
     box-shadow: 2px 2px 4px #dcdcdc;
     color: #f6f6f6;
 }
-.message-left > p > span , .message-right > p > span{
- display: block;   
- font-style: italic;
- font-size: 12px;
- margin-top: 4px;
-} 
-.feedback{
+
+.message-left>p>span,
+.message-right>p>span {
+    display: block;
+    font-style: italic;
+    font-size: 12px;
+    margin-top: 4px;
+}
+
+.feedback {
     font-style: italic;
     font-size: 14px;
-    padding:0px 16px 16px 16px;
-    color:#2d2d2d;
-    text-align:center;
+    padding: 0px 16px 16px 16px;
+    color: #2d2d2d;
+    text-align: center;
 
 }
+
 .message-form {
     display: flex;
     justify-content: space-between;
     width: 400px;
-
 }
-.message-input{
+
+.message-input {
     flex-grow: 1;
     height: 48px;
     font-size: 16px;
     border: none;
     outline: none;
-    padding:0 12px;
+    padding: 0 12px;
     background-color: #fff;
-
 }
-.send-button{
+
+.send-button {
     height: 48px;
     font-size: 16px;
-    border:none;
-    outline:none;
+    border: none;
+    outline: none;
     background-color: #fff;
     cursor: pointer;
     padding: 0px 20px;
 }
-.v-divider{
+
+.v-divider {
     height: 48px;
-    width:2px;
+    width: 2px;
     background-color: #f6f6f6;
 }
-.clients-total{
+
+.clients-total {
     margin: 20px 0;
     color: #7e7e7e;
+}
+
+/* Media Query for tiny applications */
+@media (max-width: 420px) {
+    .title {
+        font-size: 20px;
+        margin: 10px 0;
+    }
+
+    .main {
+        width: 90%;
+        border-width: 4px;
+        border-radius: 16px;
+    }
+
+    .name {
+        font-size: 24px;
+        padding: 6px 12px;
+    }
+
+    .name-input {
+        font-size: 18px;
+        margin: 0px 8px;
+    }
+
+    .message-container {
+        width: 100%;
+        height: 400px;
+    }
+
+    .message-left,
+    .message-right {
+        font-size: 14px;
+        padding: 6px 8px;
+        margin: 8px;
+    }
+
+    .message-left>p>span,
+    .message-right>p>span {
+        font-size: 10px;
+    }
+
+    .feedback {
+        font-size: 12px;
+        padding: 0px 8px 8px 8px;
+    }
+
+    .message-form {
+        width: 100%;
+    }
+
+    .message-input,
+    .send-button {
+        height: 40px;
+        font-size: 14px;
+        padding: 0 8px;
+    }
+
+    .v-divider {
+        height: 40px;
+    }
 }
