--- a/Basic/public/style.css
+++ b/Basic/public/style.css
@@ -45,7 +45,7 @@ body {
     background-color: #ebebeb;
 }
 
-.name > span {
+.name>span {
     color: #bbb;
     display: flex;
     align-items: center;
@@ -96,8 +96,8 @@ body {
     color: #f6f6f6;
 }
 
-.message-left > p > span,
-.message-right > p > span {
+.message-left>p>span,
+.message-right>p>span {
     display: block;
     font-style: italic;
     font-size: 12px;
@@ -182,16 +182,25 @@ body {
 
     .message-form {
         width: 100%;
-        padding: 8px 8px 8px 0;
+        padding: 8px;
     }
 
     .message-input {
         font-size: 14px;
+        height: 40px;
+        /* Adjusted height for smaller screens */
     }
 
     .send-button {
         font-size: 14px;
         padding: 0px 12px;
+        height: 40px;
+        /* Adjusted height for smaller screens */
+        width: 60px;
+        color: black;
+        /* Ensuring a fixed width */
+        justify-content: center;
+        /* Center the content */
     }
 
     .title {
@@ -200,18 +209,5 @@ body {
 
     .clients-total {
         font-size: 16px;
-    }
-    .send-button {
-        height: 48px;
-        font-size: 16px;
-        border: none;
-        outline: none;
-        background-color: #fff;
-        cursor: pointer;
-        padding: 0px 20px;
-        border-radius: 24px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
     }
 }
